# PyTorch_DeeplearningAI_Course

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
1.troch_fundamentals/module1/1.simple_NN/: C1_M1_Lab_1_simple_nn.ipynb  helper_utils.py
1.troch_fundamentals/module1/2.non-linear_patterns/: C1_M1_Lab_2_activation_functions.ipynb
1.troch_fundamentals/module1/3.tensor_core_pytorch/: C1_M1_Lab_3_tensors.ipynb
1.troch_fundamentals/module1/4.exam/: C1M1_Assignment.ipynb
1.troch_fundamentals/module2/1.first_image_classifier/: C1_M2_Lab_1_mnist_classifier.ipynb  requirements.txt
1.troch_fundamentals/module2/2.exam/: C1M2_Assignment.ipynb
1.troch_fundamentals/module3/1.Data_Management/: C1_M3_Lab_data_management.ipynb
1.troch_fundamentals/module3/2.exam/: C1M3_Assignment.ipynb
1.troch_fundamentals/module4/1.CNN_Classifier/: C1_M4_Lab_1_cnn_nature_classifier.ipynb
1.troch_fundamentals/module4/2.model_debugging/: C1_M4_Lab_2_debugging.ipynb
1.troch_fundamentals/module4/3.exam/: C1M4_Assignment.ipynb
2.PyTorch_for_DL/module1/1.hyper_parameter_tuning/: C2_M1_Lab_1_tuning_and_metrics.ipynb
2.PyTorch_for_DL/module1/2.Scheduler/: C2_M1_Lab_1_tuning_and_metrics.ipynb
2.PyTorch_for_DL/module1/3.Hyperparameter-optimization-optuna/: C2_M1_Lab_3_Optuna.ipynb
2.PyTorch_for_DL/module1/4.Efficiency-Performance/: C2_M1_Lab_4_Efficiency.ipynb
2.PyTorch_for_DL/module1/5.exam/: C2M1_Assignment.ipynb  unittests.py  unittests_utils.py
2.PyTorch_for_DL/module2/1.Image_preprocessing/: C2_M2_Lab_1_torchvision_1.ipynb
(+59 files in other folders)
